--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <title>Popup</title>
     <meta name="description" content="HTML & CSS practice: Hooli-style Popup" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <div class="menu">
+        <!-- <div> -->
+        <a class="link" href="#">Mail</a>
+        <a class="link" href="#">Images</a>
+        <!-- </div> -->
+        <!-- <div> -->
+        <label
+          for="popup-checkbox"
+          class="popup-button link"
+          href="#popup-window"
+        ></label>
+
+        <a class="profile link" href="#"></a>
+        <!-- </div> -->
+      </div>
+      <input type="checkbox" id="popup-checkbox" />
+      <div class="popup-window" id="popup-window">
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+        <a class="popup-item asana" href="#"></a>
+      </div>
+    </header>
+  </body>
 </html>
