--- a/index.html
+++ b/index.html
@@ -11,33 +11,42 @@
   <body>
     <header>
       <div class="menu">
-        <!-- <div> -->
         <a class="link" href="#">Mail</a>
         <a class="link" href="#">Images</a>
-        <!-- </div> -->
-        <!-- <div> -->
         <label
           for="popup-checkbox"
           class="popup-button link"
           href="#popup-window"
         ></label>
-
         <a class="profile link" href="#"></a>
-        <!-- </div> -->
       </div>
       <input type="checkbox" id="popup-checkbox" />
       <div class="popup-window" id="popup-window">
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
-        <a class="popup-item asana" href="#"></a>
+        <div class="popup-table">
+          <a class="popup-item asana" href="#"></a>
+          <a class="popup-item bindi" href="#"></a>
+          <a class="popup-item flame" href="#"></a>
+          <a class="popup-item ganesh" href="#"></a>
+          <a class="popup-item heart" href="#"></a>
+          <a class="popup-item melomane" href="#"></a>
+          <a class="popup-item horn" href="#"></a>
+          <a class="popup-item microphone" href="#"></a>
+          <a class="popup-item metronome" href="#"></a>
+          <a class="popup-item purse" href="#"></a>
+          <a class="popup-item rock" href="#"></a>
+          <a class="popup-item jossstick" href="#"></a>
+        </div>
+
+        <input type="checkbox" id="popup-more" />
+        <label class="popup-more-label" for="popup-more"> MOAR</label>
+
+        <div class="popup-table popup-table-more hidden">
+          <a class="popup-item piano" href="#"></a>
+          <a class="popup-item ear" href="#"></a>
+          <a class="popup-item ohm" href="#"></a>
+          <a class="popup-item tree" href="#"></a>
+          <a class="popup-item location" href="#"></a>
+        </div>
       </div>
     </header>
   </body>
